  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading
NOTICE: Cross-cluster Shortcuts require you to not restart all your viewers at once after upgrading

3.0.1 2021/09/xx
  - all - support float field type
  - all - support Q-in-Q ether type
  - all - --insecure has consistent messaging now
  - capture - s3 writer uses IMDSv2 (thanks fj604)
  - capture - dscp src/dst (issue #1626)
  - capture - refactor how udp tunnels are added, just normal parsers now
  - capture - initial GENEVE, VXLAN-GPE support
  - capture - initial IETF QUIC support
  - release - much improved arkime_config_interfaces.sh (thanks arkaØm)
  - release - node 14.17.6
  - viewer - stop upload menu showing up when empty command
  - viewer - improve first load time by spliting bundle and lazy load items
  - viewer - combine multiple calls into one
  - viewer - added expire debugging
  - viewer - uploadCommand can now use INSECURE-ORIGINALNAME to access uploaded filename
  - viewer - shortcut display improvements
  - viewer - didn't decrypt pcap for large packets correctly (issue #1756)
  - viewer - support wiseURL for wise.js viewer plugin (issue #1758)
  - viewer - display "0" values
  - wise - handle empty config file on startup
  - wise - support ./ with value-actions
  - wise - support usersElasticsearchAPIKey

3.0.0 2021/08/18
  - BREAKING - elasticsearch - ES 7.10.0 or later required
  - BREAKING - if not using a ES prefix, the prefix arkime_ will now be used
  - BREAKING - multies - multiESNodes requires a name: and prefix: attribute per entry
  - BREAKING - wise - custom sources will need to be modified
  - BREAKING - wise - redis urls have a new standard format
  - BREAKING - wise - for json data keyColumn has been renamed keyPath
  - BREAKING - wise - now lower case lotermfield and upper case uptermfield fields
  - BREAKING - capture - override-ips will no longer have leading 0s for ASN